qt/printsupport/gen_qprinter.nim


proc fcQPrinter_new(): ptr cQPrinter {.importc: "QPrinter_new".}
proc fcQPrinter_new2(printer: pointer): ptr cQPrinter {.importc: "QPrinter_new2".}
proc fcQPrinter_new3(mode: cint): ptr cQPrinter {.importc: "QPrinter_new3".}
proc fcQPrinter_new4(printer: pointer, mode: cint): ptr cQPrinter {.importc: "QPrinter_new4".}
proc fcQPrinter_devType(self: pointer, ): cint {.importc: "QPrinter_devType".}
proc fcQPrinter_setOutputFormat(self: pointer, format: cint): void {.importc: "QPrinter_setOutputFormat".}
proc fcQPrinter_outputFormat(self: pointer, ): cint {.importc: "QPrinter_outputFormat".}
proc fcQPrinter_setPdfVersion(self: pointer, version: cint): void {.importc: "QPrinter_setPdfVersion".}
proc fcQPrinter_pdfVersion(self: pointer, ): cint {.importc: "QPrinter_pdfVersion".}
proc fcQPrinter_setPrinterName(self: pointer, printerName: struct_miqt_string): void {.importc: "QPrinter_setPrinterName".}
proc fcQPrinter_printerName(self: pointer, ): struct_miqt_string {.importc: "QPrinter_printerName".}
proc fcQPrinter_isValid(self: pointer, ): bool {.importc: "QPrinter_isValid".}
proc fcQPrinter_setOutputFileName(self: pointer, outputFileName: struct_miqt_string): void {.importc: "QPrinter_setOutputFileName".}
proc fcQPrinter_outputFileName(self: pointer, ): struct_miqt_string {.importc: "QPrinter_outputFileName".}
proc fcQPrinter_setPrintProgram(self: pointer, printProgram: struct_miqt_string): void {.importc: "QPrinter_setPrintProgram".}
proc fcQPrinter_printProgram(self: pointer, ): struct_miqt_string {.importc: "QPrinter_printProgram".}
proc fcQPrinter_setDocName(self: pointer, docName: struct_miqt_string): void {.importc: "QPrinter_setDocName".}
proc fcQPrinter_docName(self: pointer, ): struct_miqt_string {.importc: "QPrinter_docName".}
proc fcQPrinter_setCreator(self: pointer, creator: struct_miqt_string): void {.importc: "QPrinter_setCreator".}
proc fcQPrinter_creator(self: pointer, ): struct_miqt_string {.importc: "QPrinter_creator".}
proc fcQPrinter_setOrientation(self: pointer, orientation: cint): void {.importc: "QPrinter_setOrientation".}
proc fcQPrinter_orientation(self: pointer, ): cint {.importc: "QPrinter_orientation".}
proc fcQPrinter_setPageSize(self: pointer, pageSize: cint): void {.importc: "QPrinter_setPageSize".}
proc fcQPrinter_pageSize(self: pointer, ): cint {.importc: "QPrinter_pageSize".}
proc fcQPrinter_setPageSizeMM(self: pointer, size: pointer): void {.importc: "QPrinter_setPageSizeMM".}
proc fcQPrinter_setPaperSize(self: pointer, paperSize: cint): void {.importc: "QPrinter_setPaperSize".}
proc fcQPrinter_paperSize(self: pointer, ): cint {.importc: "QPrinter_paperSize".}
proc fcQPrinter_setPaperSize2(self: pointer, paperSize: pointer, unit: cint): void {.importc: "QPrinter_setPaperSize2".}
proc fcQPrinter_paperSizeWithUnit(self: pointer, unit: cint): pointer {.importc: "QPrinter_paperSizeWithUnit".}
proc fcQPrinter_setPaperName(self: pointer, paperName: struct_miqt_string): void {.importc: "QPrinter_setPaperName".}
proc fcQPrinter_paperName(self: pointer, ): struct_miqt_string {.importc: "QPrinter_paperName".}
proc fcQPrinter_setPageOrder(self: pointer, pageOrder: cint): void {.importc: "QPrinter_setPageOrder".}
proc fcQPrinter_pageOrder(self: pointer, ): cint {.importc: "QPrinter_pageOrder".}
proc fcQPrinter_setResolution(self: pointer, resolution: cint): void {.importc: "QPrinter_setResolution".}
proc fcQPrinter_resolution(self: pointer, ): cint {.importc: "QPrinter_resolution".}
proc fcQPrinter_setColorMode(self: pointer, colorMode: cint): void {.importc: "QPrinter_setColorMode".}
proc fcQPrinter_colorMode(self: pointer, ): cint {.importc: "QPrinter_colorMode".}
proc fcQPrinter_setCollateCopies(self: pointer, collate: bool): void {.importc: "QPrinter_setCollateCopies".}
proc fcQPrinter_collateCopies(self: pointer, ): bool {.importc: "QPrinter_collateCopies".}
proc fcQPrinter_setFullPage(self: pointer, fullPage: bool): void {.importc: "QPrinter_setFullPage".}
proc fcQPrinter_fullPage(self: pointer, ): bool {.importc: "QPrinter_fullPage".}
proc fcQPrinter_setNumCopies(self: pointer, numCopies: cint): void {.importc: "QPrinter_setNumCopies".}
proc fcQPrinter_numCopies(self: pointer, ): cint {.importc: "QPrinter_numCopies".}
proc fcQPrinter_actualNumCopies(self: pointer, ): cint {.importc: "QPrinter_actualNumCopies".}
proc fcQPrinter_setCopyCount(self: pointer, copyCount: cint): void {.importc: "QPrinter_setCopyCount".}
proc fcQPrinter_copyCount(self: pointer, ): cint {.importc: "QPrinter_copyCount".}
proc fcQPrinter_supportsMultipleCopies(self: pointer, ): bool {.importc: "QPrinter_supportsMultipleCopies".}
proc fcQPrinter_setPaperSource(self: pointer, paperSource: cint): void {.importc: "QPrinter_setPaperSource".}
proc fcQPrinter_paperSource(self: pointer, ): cint {.importc: "QPrinter_paperSource".}
proc fcQPrinter_setDuplex(self: pointer, duplex: cint): void {.importc: "QPrinter_setDuplex".}
proc fcQPrinter_duplex(self: pointer, ): cint {.importc: "QPrinter_duplex".}
proc fcQPrinter_supportedResolutions(self: pointer, ): struct_miqt_array {.importc: "QPrinter_supportedResolutions".}
proc fcQPrinter_setFontEmbeddingEnabled(self: pointer, enable: bool): void {.importc: "QPrinter_setFontEmbeddingEnabled".}
proc fcQPrinter_fontEmbeddingEnabled(self: pointer, ): bool {.importc: "QPrinter_fontEmbeddingEnabled".}
proc fcQPrinter_setDoubleSidedPrinting(self: pointer, enable: bool): void {.importc: "QPrinter_setDoubleSidedPrinting".}
proc fcQPrinter_doubleSidedPrinting(self: pointer, ): bool {.importc: "QPrinter_doubleSidedPrinting".}
proc fcQPrinter_setWinPageSize(self: pointer, winPageSize: cint): void {.importc: "QPrinter_setWinPageSize".}
proc fcQPrinter_winPageSize(self: pointer, ): cint {.importc: "QPrinter_winPageSize".}
proc fcQPrinter_paperRect(self: pointer, ): pointer {.importc: "QPrinter_paperRect".}
proc fcQPrinter_pageRect(self: pointer, ): pointer {.importc: "QPrinter_pageRect".}
proc fcQPrinter_paperRectWithQPrinterUnit(self: pointer, param1: cint): pointer {.importc: "QPrinter_paperRectWithQPrinterUnit".}
proc fcQPrinter_pageRectWithQPrinterUnit(self: pointer, param1: cint): pointer {.importc: "QPrinter_pageRectWithQPrinterUnit".}
proc fcQPrinter_printerSelectionOption(self: pointer, ): struct_miqt_string {.importc: "QPrinter_printerSelectionOption".}
proc fcQPrinter_setPrinterSelectionOption(self: pointer, printerSelectionOption: struct_miqt_string): void {.importc: "QPrinter_setPrinterSelectionOption".}
proc fcQPrinter_newPage(self: pointer, ): bool {.importc: "QPrinter_newPage".}
proc fcQPrinter_abort(self: pointer, ): bool {.importc: "QPrinter_abort".}
proc fcQPrinter_printerState(self: pointer, ): cint {.importc: "QPrinter_printerState".}
proc fcQPrinter_paintEngine(self: pointer, ): pointer {.importc: "QPrinter_paintEngine".}
proc fcQPrinter_printEngine(self: pointer, ): pointer {.importc: "QPrinter_printEngine".}
proc fcQPrinter_setFromTo(self: pointer, fromPage: cint, toPage: cint): void {.importc: "QPrinter_setFromTo".}
proc fcQPrinter_fromPage(self: pointer, ): cint {.importc: "QPrinter_fromPage".}
proc fcQPrinter_toPage(self: pointer, ): cint {.importc: "QPrinter_toPage".}
proc fcQPrinter_setPrintRange(self: pointer, range: cint): void {.importc: "QPrinter_setPrintRange".}
proc fcQPrinter_printRange(self: pointer, ): cint {.importc: "QPrinter_printRange".}
proc fcQPrinter_setMargins(self: pointer, m: pointer): void {.importc: "QPrinter_setMargins".}
proc fcQPrinter_setPageMargins(self: pointer, left: float64, top: float64, right: float64, bottom: float64, unit: cint): void {.importc: "QPrinter_setPageMargins".}
proc fcQPrinter_getPageMargins(self: pointer, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64, unit: cint): void {.importc: "QPrinter_getPageMargins".}
proc fQPrinter_virtualbase_devType(self: pointer, ): cint{.importc: "QPrinter_virtualbase_devType".}
proc fcQPrinter_override_virtual_devType(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_devType".}
proc fQPrinter_virtualbase_setPageSize(self: pointer, pageSize: cint): void{.importc: "QPrinter_virtualbase_setPageSize".}
proc fcQPrinter_override_virtual_setPageSize(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_setPageSize".}
proc fQPrinter_virtualbase_setPageSizeMM(self: pointer, size: pointer): void{.importc: "QPrinter_virtualbase_setPageSizeMM".}
proc fcQPrinter_override_virtual_setPageSizeMM(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_setPageSizeMM".}
proc fQPrinter_virtualbase_newPage(self: pointer, ): bool{.importc: "QPrinter_virtualbase_newPage".}
proc fcQPrinter_override_virtual_newPage(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_newPage".}
proc fQPrinter_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QPrinter_virtualbase_paintEngine".}
proc fcQPrinter_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_paintEngine".}
proc fQPrinter_virtualbase_setMargins(self: pointer, m: pointer): void{.importc: "QPrinter_virtualbase_setMargins".}
proc fcQPrinter_override_virtual_setMargins(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_setMargins".}
proc fQPrinter_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QPrinter_virtualbase_metric".}
proc fcQPrinter_override_virtual_metric(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_metric".}
proc fQPrinter_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QPrinter_virtualbase_initPainter".}
proc fcQPrinter_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_initPainter".}
proc fQPrinter_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QPrinter_virtualbase_redirected".}
proc fcQPrinter_override_virtual_redirected(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_redirected".}
proc fQPrinter_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QPrinter_virtualbase_sharedPainter".}
proc fcQPrinter_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_sharedPainter".}
proc fcQPrinter_delete(self: pointer) {.importc: "QPrinter_delete".}


func init*(T: type QPrinter, h: ptr cQPrinter): QPrinter =
  T(h: h)
proc create*(T: type QPrinter, ): QPrinter =

  QPrinter.init(fcQPrinter_new())
proc create*(T: type QPrinter, printer: gen_qprinterinfo.QPrinterInfo): QPrinter =

  QPrinter.init(fcQPrinter_new2(printer.h))
proc create*(T: type QPrinter, mode: QPrinterPrinterMode): QPrinter =

  QPrinter.init(fcQPrinter_new3(cint(mode)))
proc create*(T: type QPrinter, printer: gen_qprinterinfo.QPrinterInfo, mode: QPrinterPrinterMode): QPrinter =

  QPrinter.init(fcQPrinter_new4(printer.h, cint(mode)))
proc devType*(self: QPrinter, ): cint =

  fcQPrinter_devType(self.h)

proc setOutputFormat*(self: QPrinter, format: QPrinterOutputFormat): void =

  fcQPrinter_setOutputFormat(self.h, cint(format))

proc outputFormat*(self: QPrinter, ): QPrinterOutputFormat =

  QPrinterOutputFormat(fcQPrinter_outputFormat(self.h))

proc setPdfVersion*(self: QPrinter, version: gen_qpagedpaintdevice.QPagedPaintDevicePdfVersion): void =

  fcQPrinter_setPdfVersion(self.h, cint(version))

proc pdfVersion*(self: QPrinter, ): gen_qpagedpaintdevice.QPagedPaintDevicePdfVersion =

  gen_qpagedpaintdevice.QPagedPaintDevicePdfVersion(fcQPrinter_pdfVersion(self.h))

proc setPrinterName*(self: QPrinter, printerName: string): void =

  fcQPrinter_setPrinterName(self.h, struct_miqt_string(data: printerName, len: csize_t(len(printerName))))

proc printerName*(self: QPrinter, ): string =

  let v_ms = fcQPrinter_printerName(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isValid*(self: QPrinter, ): bool =

  fcQPrinter_isValid(self.h)

proc setOutputFileName*(self: QPrinter, outputFileName: string): void =
